test cases for accounting service persistence

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -43,7 +43,7 @@ AccountingService_errorInvoiceCannotBeDeleted=Invoice [{0}] [{1}] and cannot be 
 AccountingService_errorCannotSaveInvoice=Invoices cannot be saved after they have been sent.
 AccountingService_errorCannotSendCancelledInvoice=Cancelled invoices cannot be sent again!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Cannot send an invoice without a due date!
-AccountingService_errorCannotSendInvoiceWithDueDateInPast=Cannot send an invoice with a due date in the past!
+AccountingService_errorCannotSendInvoiceWithDueDateInPast=Due date is in the past ({0}), cannot send this invoice! 
 
 ###############################################################################
 # Invoice states
