--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -43,7 +43,7 @@ AccountingService_errorInvoiceCannotBeDeleted=Rechnung [{0}] ist im Zustand [{1}
 AccountingService_errorCannotSaveInvoice=Rechnungen können nach dem Versenden nicht wieder gespeichert werden.
 AccountingService_errorCannotSendCancelledInvoice=Eine stornierte Rechnung kann nicht erneut verschickt werden!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Eine Rechnung kann nicht ohne Zahlungsziel verschickt werden!
-AccountingService_errorCannotSendInvoiceWithDueDateInPast=Das Zahlungsziel liegt in der Vergangenheit!
+AccountingService_errorCannotSendInvoiceWithDueDateInPast=Das Zahlungsziel liegt in der Vergangenheit ({0}), diese Rechnung kann nicht verschickt werden
 
 ###############################################################################
 # Invoice states
