added abstract command handler for all commands for generalized error handling proper i18n for existing commands refined handling of InvoiceToPdf command

--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -29,6 +29,7 @@ labelClientDetails=Kundendetails
 labelClientName=Kundenname:
 labelDescription=Beschreibung:
 labelEmail=Email:
+labelError=Fehler!
 labelFax=Fax:
 labelInvoiceDate=Rechnungsdatum:
 labelInvoiceDueDate=Zahlungsziel:
@@ -74,15 +75,24 @@ DeleteClientCommand_confirmText=Kunde löschen?
 DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] löschen wollen?
 DeleteInvoiceCommand_confirmText=Löschen bestätigen
 
+EditClientCommand_errorOpeningEditor=Fehler beim Öffnen des Kunden [{0}].
+
+EditInvoiceCommand_errorOpeningEditor=Fehler beim Öffnen der Rechnung [{0}].
+
 InvoiceEditor_details=Details
 InvoiceEditor_header=Rechnung bearbeiten
 InvoiceEditor_overview=Übersicht
-InvoiceToPdfCommand_labelPdfFiles=PDF Dateien
 
 InvoicePositionWizard_editTitle=Rechnungsposition bearbeiten
 InvoicePositionWizard_editDesc=Bearbeiten Sie Details einer bestehenden Rechnungsposition
 InvoicePositionWizard_newTitle=Rechnungsposition erstellen
 InvoicePositionWizard_newDesc=Geben Sie Details einer neuen Rechnungsposition ein
+
+InvoiceToPdfCommand_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
+InvoiceToPdfCommand_errorNoReportingService=Reporting Service ist nicht verfügbar, bitte überprüfen Sie Ihre Installation!
+InvoiceToPdfCommand_labelPdfFiles=PDF Dateien
+InvoiceToPdfCommand_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
+InvoiceToPdfCommand_successText=PDF Generierung erfolgreich
 
 InvoiceView_number=Nr.
 InvoiceView_state=Status
