--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -42,6 +42,7 @@ labelClientDetails=Client details
 labelClientName=Client name:
 labelDescription=Description:
 labelEmail=Email:
+labelError=Error!
 labelFax=Fax:
 labelInvoiceDate=Invoice date:
 labelInvoiceDueDate=Due date:
@@ -87,15 +88,24 @@ DeleteClientCommand_confirmText=Delete client?
 DeleteInvoiceCommand_confirmMessage=Are you sure you want to delete invoice [{0}] ?
 DeleteInvoiceCommand_confirmText=Confirm delete
 
+EditClientCommand_errorOpeningEditor=Error opening editor for client [{0}].
+
+EditInvoiceCommand_errorOpeningEditor=Error opening invoice [{0}].
+
 InvoiceEditor_details=Details
 InvoiceEditor_header=Edit invoice
 InvoiceEditor_overview=Overview
-InvoiceToPdfCommand_labelPdfFiles=PDF files
 
 InvoicePositionWizard_editTitle=Edit Invoice Position
 InvoicePositionWizard_editDesc=Edit details of an existing invoice position
 InvoicePositionWizard_newTitle=Create Inoivce Position
 InvoicePositionWizard_newDesc=Enter details of a new invoice position
+
+InvoiceToPdfCommand_errorGeneratingInvoice=Error generating PDF for invoice!
+InvoiceToPdfCommand_errorNoReportingService=Reporting service not found, please check your installation!
+InvoiceToPdfCommand_labelPdfFiles=PDF files
+InvoiceToPdfCommand_successMsg=PDF successfully generated to\n\"{0}\".
+InvoiceToPdfCommand_successText=PDF Generation finished
 
 InvoiceView_number=No.
 InvoiceView_state=State
