changed findInvoices to use implicit user added state-related canBeXxx methods to invoice javadoc

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -40,6 +40,7 @@ AccountingService_errorDatabaseReadOnly=Database is read-only
 AccountingService_errorMissingInvoiceNumber=Cannot save an invoice without an invoice number.
 AccountingService_errorUnknownUser=Cannot save an invoice for an unknown user.
 AccountingService_errorInvoiceCannotBeDeleted=Invoice [{0}] [{1}] and cannot be deletedis in state
+AccountingService_errorCannotMarkInvoiceAsPaid=Invoices can only be marked as paid while in state 'Sent' or 'Overdue'
 AccountingService_errorCannotSaveInvoice=Invoices cannot be saved after they have been sent.
 AccountingService_errorCannotSendCancelledInvoice=Cancelled invoices cannot be sent again!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Cannot send an invoice without a due date!
