--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -40,6 +40,7 @@ AccountingService_errorDatabaseReadOnly=Datenbank kann nur gelesen werden
 AccountingService_errorMissingInvoiceNumber=Eine Rechnung kann nur mit Rechngungsnummer gespeichert werden.
 AccountingService_errorUnknownUser=Rechnung kann nicht für einen unbekannten Nutzer gespeichert werden.
 AccountingService_errorInvoiceCannotBeDeleted=Rechnung [{0}] ist im Zustand [{1}] und kann nicht gelöscht werden.
+AccountingService_errorCannotMarkInvoiceAsPaid=Rechnungen können nur im Zustand 'Verschickt' und 'Überfällig' als bezahlt markiert werden.
 AccountingService_errorCannotSaveInvoice=Rechnungen können nach dem Versenden nicht wieder gespeichert werden.
 AccountingService_errorCannotSendCancelledInvoice=Eine stornierte Rechnung kann nicht erneut verschickt werden!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Eine Rechnung kann nicht ohne Zahlungsziel verschickt werden!
