--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -55,29 +55,29 @@ labelRemove=Löschen
 ###############################################################################
 # View / Wizard / Editor specific resources
 ###############################################################################
-AbstractClientHandler_text=Kein Kunde ausgewählt
-AbstractClientHandler_message=Bitte wählen Sie einen Kunden zum löschen aus
+AbstractClientHandler_text=Kein Kunde ausgewÃ¤hlt
+AbstractClientHandler_message=Bitte wÃ¤hlen Sie einen Kunden zum lÃ¶schen aus
 
-AccountingSplashHandler_reuseDataMsg=Existierende Daten für Benutzer \"{0}\" wurden in der angegebenen Datei gefunden.\nDiese weiter verwenden?
+AccountingSplashHandler_reuseDataMsg=Existierende Daten fÃ¼r Benutzer \"{0}\" wurden in der angegebenen Datei gefunden.\nDiese weiter verwenden?
 AccountingSplashHandler_reuseDataText=Daten verwenden?
-AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben für Programmausführung - Abbruch.
+AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben fÃ¼r Programmausfï¿½hrung - Abbruch.
 
-AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese können auch später noch eingegeben oder geändert werden.
+AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese kÃ¶nnen auch spÃ¤ter noch eingegeben oder geÃ¤ndert werden.
 AddressWizardPage_title=Kontaktinformationen
 
 ClientEditorInput_tooltip=Kunde bearbeiten
 ClientNameWizardPage_desc=Bitte geben Sie den Namen ihres neuen Kunden ein
 ClientNameWizardPage_title=Kundenname
 
-DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" löschen wollen?
-DeleteClientCommand_confirmText=Kunde löschen?
+DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" lÃ¶schen wollen?
+DeleteClientCommand_confirmText=Kunde lÃ¶schen?
 
-DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] löschen wollen?
-DeleteInvoiceCommand_confirmText=Löschen bestätigen
+DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] lÃ¶schen wollen?
+DeleteInvoiceCommand_confirmText=LÃ¶schen bestÃ¤tigen
 
-EditClientCommand_errorOpeningEditor=Fehler beim Öffnen des Kunden [{0}].
+EditClientCommand_errorOpeningEditor=Fehler beim Ã¶ffnen des Kunden [{0}].
 
-EditInvoiceCommand_errorOpeningEditor=Fehler beim Öffnen der Rechnung [{0}].
+EditInvoiceCommand_errorOpeningEditor=Fehler beim Ã¶ffnen der Rechnung [{0}].
 
 InvoiceEditor_details=Details
 InvoiceEditor_header=Rechnung bearbeiten
@@ -96,6 +96,12 @@ InvoiceToPdfCommand_successText=PDF Generierung erfolgreich
 
 InvoiceView_number=Nr.
 InvoiceView_state=Status
+
+MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Zahlungsdatum kann nicht vor dem Sendedatum liegen
+MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Zahlungsdatum kann nicht in der Zukunft liegen
+MarkInvoiceAsPaidCommand_message=Wählen Sie das Zahlungsdatum für die Rechnung
+MarkInvoiceAsPaidCommand_paymentDateLabel=Zahlungsdatum:
+MarkInvoiceAsPaidCommand_title=Rechnung als bezahlt markieren
 
 NewClientWizard_windowTitle=Neuen Kunden erstellen...
 NewClientWizard_alreadyExistsMsg=Ein Kunde mit Namen \"{0}\" existiert bereits!\n\nBitte wählen Sie einen anderen Namen.
