--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -110,6 +110,12 @@ InvoiceToPdfCommand_successText=PDF Generation finished
 InvoiceView_number=No.
 InvoiceView_state=State
 
+MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Payment date cannot be before the invoice's sent date
+MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Payment date cannot be in the future\!
+MarkInvoiceAsPaidCommand_message=Select the payment date for the invoice
+MarkInvoiceAsPaidCommand_paymentDateLabel=Payment date:
+MarkInvoiceAsPaidCommand_title=Mark invoice as paid
+
 NewClientWizard_windowTitle=Create a new client...
 NewClientWizard_alreadyExistsMsg=A client with name \"{0}\" already exists!\n\nPlease choose a different name.
 NewClientWizard_alreadyExistsText=Client already exists
