added filtering for invoice view

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -37,7 +37,7 @@ editor.invoice.name = Edit Invoice
 
 # VIEWS
 view.clients = Clients
-view.openInvoices = Open Invoices
+view.openInvoices = Invoices
 
 # WIZARDS
 new.client.wizard.label = New Client
@@ -70,3 +70,4 @@ command.invoice.send.name = Send Invoice
 command.invoice.copy.name = Copy / Duplicate
 command.invoice.markAsPaid.name = Mark as paid
 command.invoice.cancel.name = Cancel
+command.change.invoice.filter = Filter...
