--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -37,7 +37,7 @@ editor.invoice.name = Rechnung bearbeiten
 
 # VIEWS
 view.clients = Kunden
-view.openInvoices = Offene Rechnungen
+view.openInvoices = Rechnungen
 
 # WIZARDS
 new.client.wizard.label = Neuer Kunde
