--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -78,6 +78,9 @@ AccountingSplashHandler_setupDialogCancelledMsg=Cannot continue application with
 AddressWizardPage_desc=Enter contact details.\nThese can also be edited later
 AddressWizardPage_title=Contact details
 
+ChangeInvoicesFilterCommand_message=Select invoice states to display
+ChangeInvoicesFilterCommand_title=Invoices filter
+
 ClientEditorInput_tooltip=Edit this client
 ClientNameWizardPage_desc=Enter the name of your new client
 ClientNameWizardPage_title=Client name
