--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -14,6 +14,14 @@
 # limitations under the License.
 ###############################################################################
 
+# deutsche Umlaute:
+# Ä = \u00C4
+# ä = \u00E4
+# Ö = \u00D6
+# ö = \u00F6
+# Ü = \u00DC
+# ü = \u00FC
+
 ###############################################################################
 # Common labels
 ###############################################################################
@@ -49,39 +57,42 @@ labelTotalNet=Summe netto
 labelTotalTax=Steuern
 labelUnit=Einheit
 
-labelAdd=Hinzufügen...
-labelRemove=Löschen
+labelAdd=Hinzuf\u00FCgen...
+labelRemove=L\u00F6schen
 
 ###############################################################################
 # View / Wizard / Editor specific resources
 ###############################################################################
-AbstractClientHandler_text=Kein Kunde ausgewÃ¤hlt
-AbstractClientHandler_message=Bitte wÃ¤hlen Sie einen Kunden zum lÃ¶schen aus
+AbstractClientHandler_text=Kein Kunde ausgew\u00E4hlt
+AbstractClientHandler_message=Bitte w\u00E4hlen Sie einen Kunden zum l\u00F6schen aus
 
-AccountingSplashHandler_reuseDataMsg=Existierende Daten fÃ¼r Benutzer \"{0}\" wurden in der angegebenen Datei gefunden.\nDiese weiter verwenden?
+AccountingSplashHandler_reuseDataMsg=Existierende Daten f\u00FCr Benutzer \"{0}\" wurden in der angegebenen Datei gefunden.\nDiese weiter verwenden?
 AccountingSplashHandler_reuseDataText=Daten verwenden?
-AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben fÃ¼r Programmausfï¿½hrung - Abbruch.
+AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben f\u00FCr Programmausf\u00FChrung fehlen - Abbruch.
 
-AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese kÃ¶nnen auch spÃ¤ter noch eingegeben oder geÃ¤ndert werden.
+AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese k\u00F6nnen auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 AddressWizardPage_title=Kontaktinformationen
+
+ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
+ChangeInvoicesFilterCommand_title=Filter bearbeiten
 
 ClientEditorInput_tooltip=Kunde bearbeiten
 ClientNameWizardPage_desc=Bitte geben Sie den Namen ihres neuen Kunden ein
 ClientNameWizardPage_title=Kundenname
 
-DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" lÃ¶schen wollen?
-DeleteClientCommand_confirmText=Kunde lÃ¶schen?
+DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" l\u00F6schen wollen?
+DeleteClientCommand_confirmText=Kunde l\u00F6schen?
 
-DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] lÃ¶schen wollen?
-DeleteInvoiceCommand_confirmText=LÃ¶schen bestÃ¤tigen
+DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] l\u00F6schen wollen?
+DeleteInvoiceCommand_confirmText=L\u00F6schen best\u00E4tigen
 
-EditClientCommand_errorOpeningEditor=Fehler beim Ã¶ffnen des Kunden [{0}].
+EditClientCommand_errorOpeningEditor=Fehler beim \u00D6ffnen des Kunden [{0}].
 
-EditInvoiceCommand_errorOpeningEditor=Fehler beim Ã¶ffnen der Rechnung [{0}].
+EditInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der Rechnung [{0}].
 
 InvoiceEditor_details=Details
 InvoiceEditor_header=Rechnung bearbeiten
-InvoiceEditor_overview=Übersicht
+InvoiceEditor_overview=\u00DCbersicht
 
 InvoicePositionWizard_editTitle=Rechnungsposition bearbeiten
 InvoicePositionWizard_editDesc=Bearbeiten Sie Details einer bestehenden Rechnungsposition
@@ -89,7 +100,7 @@ InvoicePositionWizard_newTitle=Rechnungsposition erstellen
 InvoicePositionWizard_newDesc=Geben Sie Details einer neuen Rechnungsposition ein
 
 InvoiceToPdfCommand_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
-InvoiceToPdfCommand_errorNoReportingService=Reporting Service ist nicht verfügbar, bitte überprüfen Sie Ihre Installation!
+InvoiceToPdfCommand_errorNoReportingService=Reporting Service ist nicht verf\u00FCgbar, bitte \u00FCberpr\u00FCfen Sie Ihre Installation!
 InvoiceToPdfCommand_labelPdfFiles=PDF Dateien
 InvoiceToPdfCommand_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
 InvoiceToPdfCommand_successText=PDF Generierung erfolgreich
@@ -99,39 +110,39 @@ InvoiceView_state=Status
 
 MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Zahlungsdatum kann nicht vor dem Sendedatum liegen
 MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Zahlungsdatum kann nicht in der Zukunft liegen
-MarkInvoiceAsPaidCommand_message=Wählen Sie das Zahlungsdatum für die Rechnung
+MarkInvoiceAsPaidCommand_message=W\u00E4hlen Sie das Zahlungsdatum f\u00FCr die Rechnung
 MarkInvoiceAsPaidCommand_paymentDateLabel=Zahlungsdatum:
 MarkInvoiceAsPaidCommand_title=Rechnung als bezahlt markieren
 
 NewClientWizard_windowTitle=Neuen Kunden erstellen...
-NewClientWizard_alreadyExistsMsg=Ein Kunde mit Namen \"{0}\" existiert bereits!\n\nBitte wählen Sie einen anderen Namen.
+NewClientWizard_alreadyExistsMsg=Ein Kunde mit Namen \"{0}\" existiert bereits!\n\nBitte w\u00E4hlen Sie einen anderen Namen.
 NewClientWizard_alreadyExistsText=Kunde existiert bereits.
 
 NewInvoiceWizard_windowTitle=Neue Rechnung erstellen...
-NewInvoiceWizardPage_chooseClient=Kunde wählen (optional)
-NewInvoiceWizardPage_desc=Bitte geben Sie eine eindeutige Rechnungsnumer ein und wählen Sie optinonal einen Kunden aus.\nDer Kunde kann auch später noch gewählt werden, muss aber vor dem Absenden der Rechnung bestimmt werden.
+NewInvoiceWizardPage_chooseClient=Kunde w\u00E4hlen (optional)
+NewInvoiceWizardPage_desc=Bitte geben Sie eine eindeutige Rechnungsnumer ein und w\u00E4hlen Sie optinonal einen Kunden aus.\nDer Kunde kann auch sp\u00E4ter noch gew\u00E4hlt werden, muss aber vor dem Absenden der Rechnung bestimmt werden.
 NewInvoiceWizardPage_generate=Generieren...
 NewInvoiceWizardPage_title=Rechnungsnummer und Kunde
-NewInvoiceWizardPage_alreadyExistsMsg=Eine Rechnung mit dieser Nummer existiert bereits.\n\nBitte wählen Sie eine andere Nummer.
+NewInvoiceWizardPage_alreadyExistsMsg=Eine Rechnung mit dieser Nummer existiert bereits.\n\nBitte w\u00E4hlen Sie eine andere Nummer.
 NewInvoiceWizardPage_alreadyExistsText=Rechnungsnummer existiert bereits
 
-NewTaxRateWizard_abbreviation=Abkürzung:
-NewTaxRateWizard_description=Erstellen Sie einen neuen Steuersatz für Ihre Rechnungen.
-NewTaxRateWizard_errorMessageTitle=Ungültiger Prozentwert\!
+NewTaxRateWizard_abbreviation=Abk\u00FCrzung:
+NewTaxRateWizard_description=Erstellen Sie einen neuen Steuersatz f\u00FCr Ihre Rechnungen.
+NewTaxRateWizard_errorMessageTitle=Ung\u00FCltiger Prozentwert\!
 NewTaxRateWizard_pageTitle=Neuer Steuersatz
 NewTaxRateWizard_rate=Satz:
 NewTaxRateWizard_windowTitle=Neuer Steuersatz
 
 SetupWizard_windowTitle=Accounting setup...
-SetupBankAccountWizardPage_desc=Bitte Bankverbindung eingeben.\nDies kann auch später noch eingegeben oder geändert werden.
+SetupBankAccountWizardPage_desc=Bitte Bankverbindung eingeben.\nDies kann auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 SetupBasicInfoWizardPage_dataFile=Speicherdatei:
-SetupBasicInfoWizardPage_desc=Bitte füllen Sie folgende notwendigen Informationen aus.\nDiese können später noch geändert werden.
-SetupBasicInfoWizardPage_selectFile=Auswählen...
+SetupBasicInfoWizardPage_desc=Bitte f\u00FCllen Sie folgende notwendigen Informationen aus.\nDiese k\u00F6nnen sp\u00E4ter noch ge\u00E4ndert werden.
+SetupBasicInfoWizardPage_selectFile=Ausw\u00E4hlen...
 SetupBasicInfoWizardPage_yourName=Ihr Name:
 
 UserEditor_header=Ihre Profildaten
-UserEditor_taxeRateDescription=Verwalten Sie Ihre Steuersätze
+UserEditor_taxeRateDescription=Verwalten Sie Ihre Steuers\u00E4tze
 UserEditor_taxRate=Satz
-UserEditor_taxRateAbbreviation=Abkürzung
+UserEditor_taxRateAbbreviation=Abk\u00FCrzung
 UserEditor_taxRateName=Name
-UserEditor_taxRates=Steuersätze
+UserEditor_taxRates=Steuers\u00E4tze
