--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -14,12 +14,20 @@
 #  limitations under the License.
 ###############################################################################
 
+# deutsche Umlaute:
+# Ä = \u00C4
+# ä = \u00E4
+# Ö = \u00D6
+# ö = \u00D6
+# Ü = \u00DC
+# ü = \u00FC
+
 ###############################################################################
 # FormatUtil errors
 ###############################################################################
-FormatUtil_errorParsingDate=[{0}] ist kein gültiges Datum. 
-FormatUtil_errorParsingPercentage=[{0}] ist kein gültiger Prozentwert.
-FormatUtil_errorParsingCurrency=[{0}] ist kein gültiger Geldbetrag.
+FormatUtil_errorParsingDate=[{0}] ist kein g\u00FCltiges Datum. 
+FormatUtil_errorParsingPercentage=[{0}] ist kein g\u00FCltiger Prozentwert.
+FormatUtil_errorParsingCurrency=[{0}] ist kein g\u00FCltiger Geldbetrag.
 FormatUtil_errorParsingDecimal=[{0}] ist keine Dezimalzahl.
 
 ###############################################################################
@@ -38,10 +46,10 @@ AccountingService_errorIO=Datenbank Schreib- / Lesefehler
 AccountingService_errorDatabaseClosed=Datenbank ist geschlossen
 AccountingService_errorDatabaseReadOnly=Datenbank kann nur gelesen werden
 AccountingService_errorMissingInvoiceNumber=Eine Rechnung kann nur mit Rechngungsnummer gespeichert werden.
-AccountingService_errorUnknownUser=Rechnung kann nicht für einen unbekannten Nutzer gespeichert werden.
-AccountingService_errorInvoiceCannotBeDeleted=Rechnung [{0}] ist im Zustand [{1}] und kann nicht gelöscht werden.
-AccountingService_errorCannotMarkInvoiceAsPaid=Rechnungen können nur im Zustand 'Verschickt' und 'Üœberfällig' als bezahlt markiert werden.
-AccountingService_errorCannotSaveInvoice=Rechnungen können nach dem Versenden nicht wieder gespeichert werden.
+AccountingService_errorUnknownUser=Rechnung kann nicht f\u00FCr einen unbekannten Nutzer gespeichert werden.
+AccountingService_errorInvoiceCannotBeDeleted=Rechnung [{0}] ist im Zustand [{1}] und kann nicht gel\u00F6scht werden.
+AccountingService_errorCannotMarkInvoiceAsPaid=Rechnungen k\u00F6nnen nur im Zustand 'Verschickt' und '\u00DCœberf\u00E4llig' als bezahlt markiert werden.
+AccountingService_errorCannotSaveInvoice=Rechnungen k\u00F6nnen nach dem Versenden nicht wieder gespeichert werden.
 AccountingService_errorCannotSendCancelledInvoice=Eine stornierte Rechnung kann nicht erneut verschickt werden!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Eine Rechnung kann nicht ohne Zahlungsziel verschickt werden!
 AccountingService_errorCannotSendInvoiceWithDueDateInPast=Das Zahlungsziel liegt in der Vergangenheit ({0}), diese Rechnung kann nicht verschickt werden
@@ -52,6 +60,6 @@ AccountingService_errorCannotSendInvoiceWithDueDateInPast=Das Zahlungsziel liegt
 InvoiceState_UNSAVED=Neu
 InvoiceState_CREATED=Gespeichert
 InvoiceState_SENT=Verschickt
-InvoiceState_OVERDUE=Überfällig
+InvoiceState_OVERDUE=\u00DCberfällig
 InvoiceState_PAID=Bezahlt
 InvoiceState_CANCELLED=Storniert
