--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -68,3 +68,4 @@ command.invoice.send.name = Rechnung verschicken
 command.invoice.copy.name = Kopieren / Duplizieren
 command.invoice.markAsPaid.name = Als bezahlt markieren
 command.invoice.cancel.name = Stornieren
+command.change.invoice.filter = Filter...
