added cancelInvoice functionality

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -78,6 +78,9 @@ AccountingSplashHandler_setupDialogCancelledMsg=Cannot continue application with
 AddressWizardPage_desc=Enter contact details.\nThese can also be edited later
 AddressWizardPage_title=Contact details
 
+CancelInvoiceCommand_confirmMessage=Are you sure you want to cancel invoice [{0}] ?
+CancelInvoiceCommand_confirmText=Confirm cancel
+
 ChangeInvoicesFilterCommand_message=Select invoice states to display
 ChangeInvoicesFilterCommand_title=Invoices filter
 
