--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -73,6 +73,9 @@ AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben f\u00FCr Prog
 AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese k\u00F6nnen auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 AddressWizardPage_title=Kontaktinformationen
 
+CancelInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] stornieren wollen?
+CancelInvoiceCommand_confirmText=Rechnung stornieren?
+
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
 ChangeInvoicesFilterCommand_title=Filter bearbeiten
 
