added confirm message before sending invoice

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -141,6 +141,9 @@ NewTaxRateWizard_pageTitle=New Tax Rate
 NewTaxRateWizard_rate=Rate:
 NewTaxRateWizard_windowTitle=New Tax Rate
 
+SendInvoiceCommand_confirmMessage=Send this invoice to client?
+SendInvoiceCommand_confirmText=Send invoice...
+
 SetupWizard_windowTitle=Accounting setup...
 SetupBankAccountWizardPage_desc=Please enter your bank account details.\nThese will be used when generating invoices.
 SetupBasicInfoWizardPage_dataFile=Data file:
