--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -136,6 +136,9 @@ NewTaxRateWizard_pageTitle=Neuer Steuersatz
 NewTaxRateWizard_rate=Satz:
 NewTaxRateWizard_windowTitle=Neuer Steuersatz
 
+SendInvoiceCommand_confirmMessage=Diese Rechnung an Kunden versenden?
+SendInvoiceCommand_confirmText=Rechnung versenden...
+
 SetupWizard_windowTitle=Accounting setup...
 SetupBankAccountWizardPage_desc=Bitte Bankverbindung eingeben.\nDies kann auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 SetupBasicInfoWizardPage_dataFile=Speicherdatei:
