--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -97,6 +97,14 @@ DeleteInvoiceCommand_confirmText=Confirm delete
 EditClientCommand_errorOpeningEditor=Error opening editor for client [{0}].
 
 EditInvoiceCommand_errorOpeningEditor=Error opening invoice [{0}].
+EditInvoiceCommand_uneditableMessage=This invoice cannot be edited anymore
+EditInvoiceCommand_uneditableText=Uneditable
+
+ExportInvoiceCommand_addingReportParameters=Adding report parameters
+ExportInvoiceCommand_exportingReportToFile=Exporting report to file
+ExportInvoiceCommand_fillingReport=Filling report
+ExportInvoiceCommand_loadingTemplate=Loading template
+ExportInvoiceCommand_startingReportGeneration=Starting report generation
 
 InvoiceEditor_details=Details
 InvoiceEditor_header=Edit invoice
