--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -92,6 +92,14 @@ DeleteInvoiceCommand_confirmText=L\u00F6schen best\u00E4tigen
 EditClientCommand_errorOpeningEditor=Fehler beim \u00D6ffnen des Kunden [{0}].
 
 EditInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der Rechnung [{0}].
+EditInvoiceCommand_uneditableMessage=Diese Rechnung kann nicht mehr editiert werden.
+EditInvoiceCommand_uneditableText=Rechnung nicht editierbar
+
+ExportInvoiceCommand_addingReportParameters=F\u00FCge Parameter f\u00FCr Report hinzu
+ExportInvoiceCommand_exportingReportToFile=Exportiere Report in Datei
+ExportInvoiceCommand_fillingReport=F\u00FClle Report
+ExportInvoiceCommand_loadingTemplate=Lade template
+ExportInvoiceCommand_startingReportGeneration=Erzeugung des Report gestartet
 
 InvoiceEditor_details=Details
 InvoiceEditor_header=Rechnung bearbeiten
