added missing tax title resource letting TaxRate build its own short string

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -25,6 +25,7 @@ InvoiceDataSource_positionHeaderDescription=Description
 InvoiceDataSource_positionHeaderPrice=Total price (net)
 InvoiceDataSource_positionHeaderPricePerUnit=Price per unit (net)
 InvoiceDataSource_positionHeaderQuantity=Quantity
+InvoiceDataSource_positionHeaderTax=Tax
 InvoiceDataSource_positionHeaderUnit=Unit
 InvoiceDataSource_totalGrossTitle=Total:
 InvoiceDataSource_totalNetTitle=Sub-Total:
