--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -25,6 +25,7 @@ InvoiceDataSource_positionHeaderDescription=Leistung/\nArtikel
 InvoiceDataSource_positionHeaderPrice=Preis (netto)
 InvoiceDataSource_positionHeaderPricePerUnit=Einzelpreis (netto)
 InvoiceDataSource_positionHeaderQuantity=Anzahl
+InvoiceDataSource_positionHeaderTax=Steuer
 InvoiceDataSource_positionHeaderUnit=Einheit
 InvoiceDataSource_totalGrossTitle=Rechnungsbetrag
 InvoiceDataSource_totalNetTitle=Summe netto gesamt:
