implemented copyInvoice feature

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -46,7 +46,7 @@ labelError=Error!
 labelFax=Fax:
 labelInvoiceDate=Invoice date:
 labelInvoiceDueDate=Due date:
-labelInvoiceNo=Invoice no:
+labelInvoiceNo=Invoice number:
 labelMobile=Mobile:
 labelName=Name:
 labelPhone=Phone:
@@ -87,6 +87,12 @@ ChangeInvoicesFilterCommand_title=Invoices filter
 ClientEditorInput_tooltip=Edit this client
 ClientNameWizardPage_desc=Enter the name of your new client
 ClientNameWizardPage_title=Client name
+
+CopyInvoiceCommand_dialogMessage=Create a copy of the current invoice
+CopyInvoiceCommand_dialogTitle=Copy invoice
+CopyInvoiceCommand_errorEmptyInvoiceNumber=New invoice number cannot be empty\!
+CopyInvoiceCommand_errorExistingInvoice=An invoice with that number already exists, please enter a different one
+CopyInvoiceCommand_errorOpeningEditor=Couldn't open editor for copied invoice
 
 DeleteClientCommand_confirmMessage=Are you sure you want to delete your client \"{0}\"?
 DeleteClientCommand_confirmText=Delete client?
