--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -83,6 +83,12 @@ ClientEditorInput_tooltip=Kunde bearbeiten
 ClientNameWizardPage_desc=Bitte geben Sie den Namen ihres neuen Kunden ein
 ClientNameWizardPage_title=Kundenname
 
+CopyInvoiceCommand_dialogMessage=Erzeugen Sie eine Kopie einer existierenden Rechnung
+CopyInvoiceCommand_dialogTitle=Rechnung kopieren
+CopyInvoiceCommand_errorEmptyInvoiceNumber=Neue Rechnungsnummer kann nicht leer sein\!
+CopyInvoiceCommand_errorExistingInvoice=Eine Rechnung mit dieser Nummer existiert bereits.\nBitte w\u00E4hlen Sie eine andere Nummer.
+CopyInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der neuen Rechnung.
+
 DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" l\u00F6schen wollen?
 DeleteClientCommand_confirmText=Kunde l\u00F6schen?
 
