added revenue dialog and PDF export functionality

--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -116,12 +116,6 @@ InvoicePositionWizard_editDesc=Bearbeiten Sie Details einer bestehenden Rechnung
 InvoicePositionWizard_newTitle=Rechnungsposition erstellen
 InvoicePositionWizard_newDesc=Geben Sie Details einer neuen Rechnungsposition ein
 
-InvoiceToPdfCommand_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
-InvoiceToPdfCommand_errorNoReportingService=Reporting Service ist nicht verf\u00FCgbar, bitte \u00FCberpr\u00FCfen Sie Ihre Installation!
-InvoiceToPdfCommand_labelPdfFiles=PDF Dateien
-InvoiceToPdfCommand_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
-InvoiceToPdfCommand_successText=PDF Generierung erfolgreich
-
 InvoiceView_number=Nr.
 InvoiceView_state=Status
 
@@ -149,6 +143,28 @@ NewTaxRateWizard_errorMessageTitle=Ung\u00FCltiger Prozentwert\!
 NewTaxRateWizard_pageTitle=Neuer Steuersatz
 NewTaxRateWizard_rate=Satz:
 NewTaxRateWizard_windowTitle=Neuer Steuersatz
+
+ReportGenerationUtil_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
+ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u00FCgbar, bitte \u00FCberpr\u00FCfen Sie Ihre Installation!
+ReportGenerationUtil_labelPdfFiles=PDF Dateien
+ReportGenerationUtil_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
+ReportGenerationUtil_successText=PDF Generierung erfolgreich
+
+RevenueDialog_client=Kunde
+RevenueDialog_defaultFilename=Umsatz
+RevenueDialog_export=Exportieren...
+RevenueDialog_from=Von:
+RevenueDialog_gross=Brutto
+RevenueDialog_invoiceDate=Rechnungsdatum
+RevenueDialog_invoiceNo=Rechnungsnr.
+RevenueDialog_invoices=Rechnungen
+RevenueDialog_net=Netto
+RevenueDialog_paymentDate=Zahlungseingang
+RevenueDialog_revenueTimeframe=Zeitraum f\u00FCr Umsatz
+RevenueDialog_search=Suchen
+RevenueDialog_tax=Steuer
+RevenueDialog_totals=Summen
+RevenueDialog_until=Bis:
 
 SendInvoiceCommand_confirmMessage=Diese Rechnung an Kunden versenden?
 SendInvoiceCommand_confirmText=Rechnung versenden...
