--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -23,7 +23,7 @@ iconsGroupEdit=icons/group_edit.png
 iconsUserEdit=icons/user_edit.png
 iconsInvoiceEdit=icons/page_edit.png
 iconsDeleteInvoice=icons/page_delete.png
-iconsInvoiceToPdf=icons/page_white_acrobat.png
+iconsExportToPdf=icons/page_white_acrobat.png
 iconsMarkInvoiceAsPaid=icons/money.png
 iconsSendInvoice=icons/page_go.png
 	
@@ -121,12 +121,6 @@ InvoicePositionWizard_editDesc=Edit details of an existing invoice position
 InvoicePositionWizard_newTitle=Create Inoivce Position
 InvoicePositionWizard_newDesc=Enter details of a new invoice position
 
-InvoiceToPdfCommand_errorGeneratingInvoice=Error generating PDF for invoice!
-InvoiceToPdfCommand_errorNoReportingService=Reporting service not found, please check your installation!
-InvoiceToPdfCommand_labelPdfFiles=PDF files
-InvoiceToPdfCommand_successMsg=PDF successfully generated to\n\"{0}\".
-InvoiceToPdfCommand_successText=PDF Generation finished
-
 InvoiceView_number=No.
 InvoiceView_state=State
 
@@ -154,6 +148,28 @@ NewTaxRateWizard_errorMessageTitle=Illegal percentage\!
 NewTaxRateWizard_pageTitle=New Tax Rate
 NewTaxRateWizard_rate=Rate:
 NewTaxRateWizard_windowTitle=New Tax Rate
+
+ReportGenerationUtil_errorGeneratingInvoice=Error generating PDF for invoice!
+ReportGenerationUtil_errorNoReportingService=Reporting service not found, please check your installation!
+ReportGenerationUtil_labelPdfFiles=PDF files
+ReportGenerationUtil_successMsg=PDF successfully generated to\n\"{0}\".
+ReportGenerationUtil_successText=PDF Generation finished
+
+RevenueDialog_client=Client
+RevenueDialog_defaultFilename=Revenue
+RevenueDialog_export=Export...
+RevenueDialog_from=From:
+RevenueDialog_gross=Gross
+RevenueDialog_invoiceDate=Invoice Date
+RevenueDialog_invoiceNo=Invoice no
+RevenueDialog_invoices=Invoices
+RevenueDialog_net=Net
+RevenueDialog_paymentDate=Payment Date
+RevenueDialog_revenueTimeframe=Revenue timeframe
+RevenueDialog_search=Search
+RevenueDialog_tax=Tax
+RevenueDialog_totals=Totals
+RevenueDialog_until=Until:
 
 SendInvoiceCommand_confirmMessage=Send this invoice to client?
 SendInvoiceCommand_confirmText=Send invoice...
