layout changes to report templates

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -22,8 +22,8 @@ InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
 InvoiceDataSource_invoiceTitle=Rechnung
 InvoiceDataSource_paymentConditionText=Zahlbar innerhalb 30 Tagen ohne Abzug
 InvoiceDataSource_positionHeaderDescription=Leistung/\nArtikel
-InvoiceDataSource_positionHeaderPrice=Preis (netto)
-InvoiceDataSource_positionHeaderPricePerUnit=Einzelpreis (netto)
+InvoiceDataSource_positionHeaderPrice=Preis\n(netto)
+InvoiceDataSource_positionHeaderPricePerUnit=Einzelpreis\n(netto)
 InvoiceDataSource_positionHeaderQuantity=Anzahl
 InvoiceDataSource_positionHeaderTax=Steuer
 InvoiceDataSource_positionHeaderUnit=Einheit
