added column due date to invoice view

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -123,6 +123,7 @@ InvoicePositionWizard_newDesc=Enter details of a new invoice position
 
 InvoiceView_number=No.
 InvoiceView_state=State
+InvoiceView_dueDate=Due date
 
 MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Payment date cannot be before the invoice's sent date
 MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Payment date cannot be in the future\!
