--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -118,6 +118,7 @@ InvoicePositionWizard_newDesc=Geben Sie Details einer neuen Rechnungsposition ei
 
 InvoiceView_number=Nr.
 InvoiceView_state=Status
+InvoiceView_dueDate=Zahlungsziel
 
 MarkInvoiceAsPaidCommand_errorPaymentDateBeforeSentDate=Zahlungsdatum kann nicht vor dem Sendedatum liegen
 MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Zahlungsdatum kann nicht in der Zukunft liegen
