--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -69,3 +69,6 @@ command.invoice.copy.name = Kopieren / Duplizieren
 command.invoice.markAsPaid.name = Als bezahlt markieren
 command.invoice.cancel.name = Stornieren
 command.change.invoice.filter = Filter...
+
+# COMMANDS - REVENUE
+command.revenue.name = Umsatz...
