added specific date to sendInvoice added XML export functionality

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -174,8 +174,9 @@ RevenueDialog_tax=Tax
 RevenueDialog_totals=Totals
 RevenueDialog_until=Until:
 
-SendInvoiceCommand_confirmMessage=Send this invoice to client?
-SendInvoiceCommand_confirmText=Send invoice...
+SendInvoiceCommand_message=Select the date that invoice [{0}] was sent to client
+SendInvoiceCommand_title=Mark invoice as sent...
+SendInvoiceCommand_sentDateLabel=Sent on:
 
 SetupWizard_windowTitle=Accounting setup...
 SetupBankAccountWizardPage_desc=Please enter your bank account details.\nThese will be used when generating invoices.
