added revenue relevancy flag to invoice position

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -55,6 +55,7 @@ labelPhone=Phone:
 labelPostalCode=Post Code:
 labelPricePerUnit=Price per Unit
 labelQuantity=Quantity
+labelRevenueRelevant=Revenue-relevant
 labelStreet=Street:
 labelSubtotal=Sub total
 labelTaxId=Tax ID:
@@ -66,6 +67,9 @@ labelUnit=Unit
 
 labelAdd=Add...
 labelRemove=Remove
+
+labelYes=Yes
+labelNo=No
 
 ###############################################################################
 # View / Wizard / Editor specific resources
