--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -48,6 +48,7 @@ labelPhone=Telefon:
 labelPostalCode=Postleitzahl:
 labelPricePerUnit=Einzelpreis
 labelQuantity=Anzahl
+labelRevenueRelevant=Umsatzrelevant
 labelStreet=Strasse:
 labelSubtotal=Zwischensumme
 labelTaxId=Steuernummer:
@@ -59,6 +60,9 @@ labelUnit=Einheit
 
 labelAdd=Hinzuf\u00FCgen...
 labelRemove=L\u00F6schen
+
+labelYes=Ja
+labelNo=Nein
 
 ###############################################################################
 # View / Wizard / Editor specific resources
