i18n and UI refinements

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -33,7 +33,7 @@ menu.help.about.label = About
 # EDITORS
 editor.user.name = User Editor
 editor.client.name = Client Editor
-editor.invoice.name = Edit Invoice
+editor.invoice.name = View / Edit Invoice
 
 # VIEWS
 view.clients = Clients
@@ -63,10 +63,10 @@ command.deleteClient.name = Delete Client
 command.viewInvoices.label = View Invoices
 command.newInvoice.name = New Invoice...
 commandCategory.invoice.name = Invoice Command Category
-command.invoice.edit = Edit Invoice
+command.invoice.edit = View / Edit Invoice
 command.invoice.delete.name = Delete
 command.invoice.toPdf.name = Generate PDF
-command.invoice.send.name = Send Invoice
+command.invoice.send.name = Send (bill) Invoice
 command.invoice.copy.name = Copy / Duplicate
 command.invoice.markAsPaid.name = Mark as paid
 command.invoice.cancel.name = Cancel
