--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -33,7 +33,7 @@ menu.help.about.label = Über...
 # EDITORS
 editor.user.name = Benutzer
 editor.client.name = Kunden
-editor.invoice.name = Rechnung bearbeiten
+editor.invoice.name = Rechnung ansehen / bearbeiten
 
 # VIEWS
 view.clients = Kunden
@@ -61,10 +61,10 @@ command.deleteClient.name = Kunde löschen
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
 command.newInvoice.name = Neue Rechnung...
-command.invoice.edit = Rechnung bearbeiten
+command.invoice.edit = Rechnung ansehen / bearbeiten
 command.invoice.delete.name = Löschen...
 command.invoice.toPdf.name = PDF erzeugen
-command.invoice.send.name = Rechnung verschicken
+command.invoice.send.name = Rechnung fakturieren
 command.invoice.copy.name = Kopieren / Duplizieren
 command.invoice.markAsPaid.name = Als bezahlt markieren
 command.invoice.cancel.name = Stornieren
