--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -178,9 +178,9 @@ RevenueDialog_tax=Tax
 RevenueDialog_totals=Totals
 RevenueDialog_until=Until:
 
-SendInvoiceCommand_message=Select the date that invoice [{0}] was sent to client
-SendInvoiceCommand_title=Mark invoice as sent...
-SendInvoiceCommand_sentDateLabel=Sent on:
+SendInvoiceCommand_message=Select the date that invoice [{0}] was billed
+SendInvoiceCommand_title=Mark invoice as billed...
+SendInvoiceCommand_sentDateLabel=Billed on:
 
 SetupWizard_windowTitle=Accounting setup...
 SetupBankAccountWizardPage_desc=Please enter your bank account details.\nThese will be used when generating invoices.
