--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -171,9 +171,9 @@ RevenueDialog_tax=Steuer
 RevenueDialog_totals=Summen
 RevenueDialog_until=Bis:
 
-SendInvoiceCommand_message=Wählen Sie das Datum, an dem Rechnung [{0}] an Kunde verschickt wurde
-SendInvoiceCommand_title=Rechnung als verschickt markieren...
-SendInvoiceCommand_sentDateLabel=Verschickt am:
+SendInvoiceCommand_message=Wählen Sie das Datum, für die Fakturierung der Rechnung [{0}]
+SendInvoiceCommand_title=Rechnung fakturieren...
+SendInvoiceCommand_sentDateLabel=Fakturiert am:
 
 SetupWizard_windowTitle=Accounting setup...
 SetupBankAccountWizardPage_desc=Bitte Bankverbindung eingeben.\nDies kann auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
